allow modify and delete prmissions

--- a/mnt/mmc/MUOS/application/CopyParty/App/copyparty.conf
+++ b/mnt/mmc/MUOS/application/CopyParty/App/copyparty.conf
@@ -8,11 +8,11 @@
   root: root
 
 [/mnt/sdcard]
-  /mnt/sdcard 
+  /mnt/sdcard
   accs:
-    rw: root
+    rwmd: root
 
 [/mnt/mmc]
   /mnt/mmc
   accs:
-    rw: root
+    rwmd: root
